@@ -179,7 +179,8 @@ The key will appear next to the menu item and you can just press that key withou
   <section name='bind' title='Mouse bindings'>
     <toggle name='new_button_1' label='New window on button 1 (RISC OS style)'>Clicking with mouse button 1 (usually the left button) opens a directory in a new window with this turned on. Clicking with the button-2 (middle) will reuse the current window.</toggle>
     <toggle name='menu_button_2' label='Menu on button 2 (RISC OS style)'>Use button 2, the middle button (click both buttons at once on two button mice), to pop up the menu. If off, use button 3 (right) instead.</toggle>
-    <toggle name='single_click' label='Single-click navigation'>Clicking on an item opens it with this on. Hold down Control to select the item instead. If off, clicking once selects an item; double click to open things.</toggle>
+    <toggle name='single_click' label='Single-click navigation in filer windows'>Clicking on an item opens it with this on. Hold down Control to select the item instead. If off, clicking once selects an item; double click to open things.</toggle>
+    <toggle name='single_pinboard' label='Single-click navigation on the pinboard'>Clicking on an item opens it with this on. Hold down Control to select the item instead. If off, clicking once selects an item; double click to open things.</toggle>
   </section>
   <section name='type' title='Types'>
     <label>The filer uses a set of rules to work out the correct MIME type
