@@ -7,6 +7,8 @@
 Closing a window with a keypress caused warnings to appear (reported by
 Fabien Coutant).
 Updated Spanish translation (Marcelo Ramos).
+New 'Single click nagivation on the pinboard' option (requested by
+Michael).
 
 13-Dec-2001 (Release 1.1.9)
 ~~~~~~~~~~~
